docs: end audit Java Base